46
================

02/12/22 Merged event_new (Roman Safovich) #1186
27/11/22 Cardcom invoicing for non-cc payments (Saggi Neuemann)
23/11/22 Never vaccinated defaults to off #944
21/11/22 adoptable_js: Subsitute \n for <br> to make life easier for callers
21/11/22 Truncate all comment length fields in find result screens
21/11/22 Add extra litter filters for 6 months, 2 years, 3 years
21/11/22 Fix bug that showed litters as complete if any expiry date set
18/11/22 Never vaccinated alert/emblem #481 #944
16/11/22 System log type option, configurable via defaults #804
16/11/22 Show column for littermates on the litter editing screen #1195
16/11/22 Restrict new litters to 20 animals to prevent mistakes #903
10/11/22 Add extra anibase/identichip prefixes: 978102, 972055
09/11/22 follow redirects when retrieving images via http
09/11/22 csvexport animals: include costs with support for importing #1192
09/11/22 csvexport animals: embed URLs instead of base64, allow all pdf/images
07/11/22 Updated Hebrew Translation (Saggi Neuemann)
07/11/22 Classify bulk emails with Precedence: Bulk to stop backscatter
05/11/22 Recalculate age when generating documents from animals
03/11/22 Fix bug where fostered animals show age group at entry instead of now
01/11/22 Disable TinyMCE context menu so browser cut/copy/paste can be used
01/11/22 adoptable_js: filters for goodwith and where #1097
01/11/22 Sort person flags column before storing
30/10/22 Support CTE/WITH syntax for reports and in SQL Interface
28/10/22 Add adoptable emblem #1189
23/10/22 Option to supply a custom WHERE clause when exporting animals
20/10/22 Hide location of non-shelter animals in find animal results
20/10/22 Fix timezone issue when receiving payments via processors
19/10/22 Reservation book: Email people linked to selected reserves #1180
18/10/22 Reservation book: select by animal, view media and cancel button #1180
13/10/22 Include animal/person name in online form media name #1181